fix list gap

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -138,8 +138,13 @@ form,
 }
 
 .weather-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 4rem 2rem;
   border: var(--hightlight-color) 1px solid;
-  margin: 1.5rem 0;
+  margin: 3rem 0;
   background-color: var(--card-color);
   box-shadow: 9px 13px 11px 2px var(--shadow-color);
 }
